fixing-scrollbar&profile

--- a/style.css
+++ b/style.css
@@ -158,8 +158,8 @@ p {
 }
 
 .home_profile {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 280px;
     border-radius: 50%;
     border: 1px solid var(--color-white);
 }
@@ -187,6 +187,10 @@ p {
     padding: 50px;
     text-align: center;
     margin: auto;
+}
+
+.up-on-scroll {
+    transition: transform 1.5s, opacity 0.8s;
 }
 
 .section_container {
